tests/ui/associated-types/consecutive-shorthand-projections-not-in-item-bounds.stderr
error[E0220]: associated type `Ty` not found for `<T as Trait>::Ty`
  --> $DIR/consecutive-shorthand-projections-not-in-item-bounds.rs:4:19
   |
LL |     let _: T::Ty::Ty;
   |                   ^^ there is an associated type `Ty` in the trait `Trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0220`.
